20260108 ./CHANGELOG.txt created.
20260108 ./var/www/cjdns/hia/README.txt added.
20260108 ./var/www/cjdns/hia/HOWTO.txt added.
20260108 ./var/www/cjdns/hia/api/README.txt added.
20260108 ./var/www/cjdns/hia/api/api-update.sh added.
20260108 ./var/www/cjdns/hia/api/api-dump.sh added.
20260108 ./var/www/cjdns/hia/watchlist/clean.sh added.
20260108 ./var/www/cjdns/hia/watchlist/l.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-iplist.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-cifs.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-dns.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-ftp.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http-ipfs.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http-ak.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http-titles.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-http-referer.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-stats.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-nfs.sh added.
20260108 ./var/www/cjdns/hia/watchlist/hia-parse-nodeinfo.sh added.